updated many files

--- a/database/sqlite3.ipynb
+++ b/database/sqlite3.ipynb
@@ -14,13 +14,13 @@
       "import sqlite3\n",
       "import sys\n",
       "\n",
-      "con = None\n",
+      "connection = None\n",
       "\n",
       "try:\n",
-      "    con = sqlite3.connect('database.db')\n",
-      "    query = con.cursor()    \n",
+      "    connection = sqlite3.connect('database.db')\n",
+      "    query = connection.cursor()    \n",
       "    query.execute('SELECT * from locations')\n",
-      "    data = cur.fetchall()\n",
+      "    data = query.fetchall()\n",
       "    for column in data:\n",
       "        print \"%s\\t%s\" % (column[0], [column[2], column[3]])\n",
       "        \n",
@@ -40,11 +40,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "working\n"
+        "sorab\t[10.22, 50.1]\n",
+        "bangalore\t[10.22, 30.1]\n",
+        "shimoga\t[40.22, 30.1]\n"
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 37
     }
    ],
    "metadata": {}
